--- a/privacy.html
+++ b/privacy.html
@@ -67,14 +67,14 @@
         background: #7c3aed;
       }
       .container {
-        max-width: 4rem;
+        max-width: 56rem;
         margin: 0 auto;
         padding: 2rem 1.5rem;
         padding-top: 8rem;
       }
       @media (min-width: 768px) {
         .container {
-          max-width: 56rem;
+          max-width: 64rem;
         }
       }
       .content {
@@ -154,79 +154,50 @@
 
         <section>
           <h2>Information We Collect</h2>
-          <p>BoostCards collects minimal information to provide our AI-powered flashcard service:</p>
-          <ul>
-            <li><strong>Study Content:</strong> Text, images, PDFs, and voice recordings you upload to generate flashcards</li>
-            <li><strong>Usage Data:</strong> Study sessions, progress tracking, and app analytics to improve your learning experience</li>
-            <li><strong>Account Information:</strong> Email address and subscription status for app access and billing</li>
-            <li><strong>Device Data:</strong> iOS version and device type for app optimization</li>
-          </ul>
+          <p>BoostCards collects minimal information to provide our AI-powered flashcard service. We collect study content including text, images, PDFs, and voice recordings that you upload to generate flashcards. Additionally, we gather usage data such as study sessions, progress tracking, and app analytics to improve your learning experience.</p>
+          <p>We also collect basic device information including your iOS version and device type for app optimization purposes. All data collection is focused solely on enhancing your learning experience and maintaining app functionality.</p>
         </section>
 
         <section>
           <h2>How We Use Your Information</h2>
-          <ul>
-            <li><strong>AI Processing:</strong> Generate personalized flashcards from your study materials</li>
-            <li><strong>Sync & Backup:</strong> CloudKit integration to sync your flashcards across Apple devices</li>
-            <li><strong>Learning Analytics:</strong> Track your progress and optimize spaced repetition algorithms</li>
-            <li><strong>App Improvement:</strong> Analyze usage patterns to enhance features and performance</li>
-          </ul>
+          <p>Your information is used exclusively to provide and improve our flashcard learning service. We process your study materials through AI technology to generate personalized flashcards that enhance your learning experience. Your flashcards are synchronized and backed up through Apple's CloudKit integration, ensuring your study progress is preserved across all your Apple devices.</p>
+          <p>We analyze your learning patterns and study sessions to optimize our spaced repetition algorithms, helping you learn more effectively. Usage data is also utilized to enhance app features and performance, ensuring BoostCards continues to meet your educational needs.</p>
         </section>
 
         <section>
           <h2>Data Storage & Security</h2>
-          <p>Your data security is our priority:</p>
-          <ul>
-            <li><strong>Apple CloudKit:</strong> Your flashcards are stored securely in Apple's CloudKit with end-to-end encryption</li>
-            <li><strong>AI Processing:</strong> Content sent to OpenAI for flashcard generation is processed securely and not stored permanently</li>
-            <li><strong>Local Storage:</strong> Voice recordings and images are processed locally when possible</li>
-            <li><strong>No Third-Party Sharing:</strong> We never sell or share your personal study content with third parties</li>
-          </ul>
+          <p>Your data security is our highest priority. Your flashcards are stored securely in Apple's CloudKit infrastructure with end-to-end encryption, ensuring that only you can access your study materials. When generating flashcards, your content is processed securely through OpenAI's services and is not stored permanently by third-party providers.</p>
+          <p>Voice recordings and images are processed locally on your device whenever possible, minimizing data transmission. We maintain strict data protection standards and never sell or share your personal study content with third parties under any circumstances.</p>
         </section>
 
         <section>
           <h2>Voice & Image Processing</h2>
-          <ul>
-            <li><strong>Speech Recognition:</strong> Uses Apple's on-device Speech framework when possible</li>
-            <li><strong>Image Processing:</strong> Apple's Vision framework processes images locally on your device</li>
-            <li><strong>PDF Text Extraction:</strong> Performed locally using Apple's frameworks</li>
-            <li><strong>Temporary Processing:</strong> Audio recordings are temporarily processed for text conversion, then deleted</li>
-          </ul>
+          <p>BoostCards prioritizes your privacy by processing voice and image content locally whenever possible. Speech recognition utilizes Apple's on-device Speech framework, while image processing leverages Apple's Vision framework to extract text directly on your device. PDF text extraction is also performed locally using Apple's native frameworks.</p>
+          <p>Audio recordings are temporarily processed for text conversion and are immediately deleted once transcription is complete. This approach minimizes data transmission and ensures your personal content remains private throughout the learning process.</p>
         </section>
 
         <section>
-          <h2>Your Rights</h2>
-          <p>You have full control over your data:</p>
-          <ul>
-            <li><strong>Delete Data:</strong> Remove individual flashcards or entire study sets anytime</li>
-            <li><strong>Export Data:</strong> Request a copy of your study materials</li>
-            <li><strong>Account Deletion:</strong> Delete your account and all associated data permanently</li>
-            <li><strong>Opt-Out:</strong> Disable analytics or AI features in app settings</li>
-          </ul>
+          <h2>Your Data Rights</h2>
+          <p>You maintain complete control over your data within BoostCards. You can delete individual flashcards or entire study sets at any time through the app interface. All data associated with deleted study sets is permanently removed from both your device and Apple's CloudKit storage.</p>
+          <p>You have the right to export your study materials and can disable analytics or AI features through the app settings. Since BoostCards operates without traditional user accounts, your data is tied directly to your Apple ID through CloudKit, providing seamless integration while maintaining your privacy.</p>
         </section>
 
         <section>
           <h2>Third-Party Services</h2>
-          <p>BoostCards integrates with these trusted services:</p>
-          <ul>
-            <li><strong>OpenAI:</strong> Powers AI flashcard generation (content processed securely, not stored)</li>
-            <li><strong>Apple CloudKit:</strong> Secure data sync across your Apple devices</li>
-            <li><strong>App Store:</strong> Handles subscription billing and management</li>
-          </ul>
+          <p>BoostCards integrates with carefully selected, trusted services to provide our core functionality. OpenAI powers our AI flashcard generation capabilities, processing your content securely without permanent storage. Apple CloudKit provides secure data synchronization across your Apple devices with industry-leading encryption standards.</p>
+          <p>The App Store handles all subscription billing and management, ensuring secure payment processing through Apple's established infrastructure. These integrations are essential for app functionality while maintaining the highest security and privacy standards.</p>
         </section>
 
         <section>
           <h2>Children's Privacy</h2>
-          <p>BoostCards is safe for users of all ages. We do not knowingly collect personal information from children under 13 without parental consent. Parents can review and delete their child's data at any time.</p>
+          <p>BoostCards is designed to be safe and appropriate for learners of all ages. We do not knowingly collect personal information from children under 13 years of age. If we become aware that we have collected personal information from a child under 13, we will take immediate steps to delete such information.</p>
+          <p>Parents and guardians have full control over their child's study data and can review or delete any information at any time through the app interface. We encourage parents to discuss online privacy and safe app usage with their children.</p>
         </section>
 
         <section>
           <h2>Contact Us</h2>
-          <p>For privacy questions or data requests:</p>
-          <ul>
-            <li><strong>Email:</strong> privacy@boostcards.app</li>
-            <li><strong>In-App:</strong> Use the contact form in BoostCards settings</li>
-          </ul>
+          <p>If you have questions about this privacy policy or need assistance with your data, please contact us at stanledelacruz31@gmail.com. You can also reach us through the contact form available in the BoostCards app settings.</p>
+          <p>We are committed to addressing your privacy concerns promptly and transparently.</p>
         </section>
 
         <section>
@@ -237,7 +208,7 @@
     </main>
 
     <footer class="footer">
-      <p>&copy; 2024 BoostCards. All rights reserved.</p>
+      <p>&copy; 2025 BoostCards. All rights reserved.</p>
     </footer>
   </body>
 </html>
