--- a/privacy.html
+++ b/privacy.html
@@ -139,7 +139,7 @@
     <header class="header">
       <div class="header-content">
         <div class="logo">
-          <div class="logo-icon">S</div>
+          <img src="/studyspark-landing/app-icon.png" alt="StudySpark Logo" style="width: 32px; height: 32px; border-radius: 8px;">
           <span class="logo-text">StudySpark</span>
         </div>
         <a href="/studyspark-landing/" class="back-btn">Back to Home</a>
